# rational-dex

./: .gitignore  Anchor.toml  Cargo.toml  README.md  esbuild_tests.js  package-lock.json  package.js  package.json
.cargo/: config.toml
artifacts/: arcium_clock.json  arcium_fee_pool.json  arx_ata_2wkL_nLmH.json  arx_ata_3rRf_ffRY.json  arx_ata_DLRj_XxFC.json  arx_mint.json  arx_node_3rRf_ffRY.json  arx_node_DLRj_XxFC.json  circuits_hash.txt  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  init_vote_stats_raw_circuit_0.json  mempool_acc.json  mxe_acc.json  mxe_keygen_comp.json  mxe_keygen_comp_def.json  operator_acc_3rRf_ffRY.json  operator_acc_DLRj_XxFC.json  reveal_result_raw_circuit_0.json  vote_raw_circuit_0.json  wallet_acc_2wkL_nLmH.json  wallet_acc_3rRf_ffRY.json  wallet_acc_DLRj_XxFC.json  wallet_acc_callback_7Yr4_2Yxr.json  wallet_acc_callback_GJFD_jgDW.json
artifacts/localnet/: identity_0.pem  identity_1.pem  node_0.json  node_1.json  node_callback_0.json  node_callback_1.json
assets/: tailwind.css
docs/: rational-exchange-logic.md  zero-copy-risk.md
encrypted-ixs/src/: lib.rs
frontend/: .gitignore  Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.js  tailwind.config.js
frontend/assets/: tailwind.css
frontend/src/: app.rs  dioxus_adapter.rs  fetch_parser.rs  fetch_util.rs  header.rs  main.rs  svg_assets.rs  utils.rs
frontend/src/views/: accounts.rs  airdrop.rs  clusters.rs  connect_first.rs  dashboard.rs  extras.rs  footer.rs  mod.rs  receive_sol.rs  send_sol.rs
frontend/src/views/extras_views/: mod.rs  sign_message.rs  sign_tx.rs  siws.rs
js-api/: arcium-functions.ts  hello.ts
programs/rational-dex/: Cargo.toml
programs/rational-dex-program/: Cargo.toml
programs/rational-dex-program/src/: error.rs  lib.rs
programs/rational-dex-program/src/instructions/: pool.rs
programs/rational-dex/src/: constants.rs  error.rs  events.rs  lib.rs
programs/rational-dex/src/instructions/: conviction_voting.rs  mod.rs  poll.rs  pool.rs  reveal.rs  vote.rs
programs/rational-dex/src/instructions/swap/: cancel_offer.rs  make_offer.rs  mod.rs  shared.rs  take_offer.rs
programs/rational-dex/src/state/: conviction_state.rs  mod.rs  poll_state.rs  pool_state.rs  swap_state.rs  vote_states.rs
tests/: Cargo.toml
tests (2)/: price_discovery.ts  voting.ts
tests/modules/: package.js
tests/src/: lib.rs  test_conviction.rs  test_initialize.rs
