[package]
name = "rational-dex"
version = "1.1.0"
authors = ["Amiya Behera <amiyatulu@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }

wallet-adapter = "1.2.2"
solana-sdk = "2.1.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
gloo-timers = "0.3.0"
solana-transaction-error = { version = "2.1.13", features = ["serde"] }
qrcodegen = "1.8.0"
percent-encoding = "2.3.1"
fastrand = "2.3.0"
partial-idl-parser = "1.2.0"

[features]
default = ["web"]
web = ["dioxus/web"]
