[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]

rational-dex-program = { version = "0.1.0", path = "../programs/rational-dex-program" }
anchor-lang = "0.31"
anchor-client = "0.31.1"
spl-associated-token-account = "7.0.0"
spl-token = "7.0.0"
solana-program = "2.3.0"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
litesvm = "0.7.0"
# solana-program = "2.3.0"
# anchor-spl = "0.31.1"
solana-message = "2.4.0"
solana-pubkey = "2.4.0"
# solana-system-interface = "2.0.0"
solana-keypair = "2.2.3"
solana-signer = "2.2.1"
solana-transaction = "2.2.3"
solana-instruction = { version = "2.3.0", features = ["bincode"]}
# solana-sdk = "2.3.1"
spl-associated-token-account-client = "2.0.0"
solana-account = "2.1.21"
solana-program-option = "2.1.21"
solana-program-pack = "2.1.21"
partial-idl-parser = "1.2.0"
borsh = { version = "1.5", features = ["derive"] }
